# slate

./: .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  CHANGELOG.md  CMakeLists.txt  Ccblas.hh  Cclapack.hh  GNUmakefile  GNUmakefile.subdir  INSTALL.md  Jenkinsfile  Jenkinsfile-mpi  LICENSE  Makefile  README.md  Slate_Matrix.hh  Slate_Tile.hh  app.cc  blas.cc  blas.hh  env.sh  lapack.cc  lapack.hh  lin.mk  mac.mk  make.gen.hipSLATE  options.cc  potrf.cc  power8.mk  slate.hh  slateConfig.cmake.in  slate_BandMatrix.hh  slate_BaseMatrix.hh  slate_BaseTrapezoidMatrix.hh  slate_ColMajorTile.hh  slate_Debug.cc  slate_Debug.hh  slate_Exception.cc  (+136 more)
.e4s/: e4s.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.sh  configure.sh  info.sh  main.yml  make_nogpu.sh  queued.yml  setup.sh  setup_amd.sh  setup_env.sh  setup_nogpu.sh  setup_nvidia.sh  spack.sh  spack.yml  spack_packages.yaml  spack_packages_yaml  test.sh
cmake/: hipify.cmake  util.cmake
docs/: usage.md
docs/doxygen/: DoxygenLayout.xml  customdoxygen.css  doxyfile.conf  filter.pl  groups.dox  mathjax_commands.js
examples/: CMakeLists.txt  Makefile  README.md  ex01_matrix.cc  ex02_conversion.cc  ex03_submatrix.cc  ex04_norm.cc  ex05_blas.cc  ex06_linear_system_lu.cc  ex07_linear_system_cholesky.cc  ex08_linear_system_indefinite.cc  ex09_least_squares.cc  ex10_svd.cc  ex11_hermitian_eig.cc  ex12_generalized_hermitian_eig.cc  ex13_non_uniform_block_size.cc  ex14_scalapack_gemm.cc  ex15_set_matrix.cc  run_tests.py  scalapack.h  slate_lu.cc  slate_lu.sh  util.hh
examples/c_api/: Makefile  ex05_blas.c  ex06_linear_system_lu.c  util.h
examples/fortran/: Makefile  ex05_blas.f90  util.f90
include/: slate_HermitianMatrix.hh  slate_Matrix.hh  slate_SymmetricMatrix.hh  slate_Tile.hh  slate_TrapezoidMatrix.hh  slate_TriangularBandMatrix.hh  slate_TriangularMatrix.hh  slate_types.hh
lapack_api/: README_lapack_api.txt  example_dgetrf.c  lapack_gecon.cc  lapack_gels.cc  lapack_gemm.cc  lapack_gesv.cc  lapack_gesvMixed.cc  lapack_gesv_mixed.cc  lapack_gesvd.cc  lapack_getrf.cc  lapack_getri.cc  lapack_getrs.cc  lapack_heev.cc  lapack_heevd.cc  lapack_hemm.cc  lapack_her2k.cc  lapack_herk.cc  lapack_lange.cc  lapack_lanhe.cc  lapack_lansy.cc  lapack_lantr.cc  lapack_pocon.cc  lapack_posv.cc  lapack_potrf.cc  lapack_potri.cc  lapack_slate.cc  lapack_slate.hh  lapack_symm.cc  lapack_syr2k.cc  lapack_syrk.cc  lapack_trcon.cc  lapack_trmm.cc  lapack_trsm.cc
lapack_compat/: lapack_compat_gemm.cc
matgen/: generate_matrix.hh  generate_matrix_ge.cc  generate_matrix_he.cc  generate_matrix_he_and_tz.cc  generate_matrix_tz.cc  generate_matrix_utils.cc  generate_matrix_utils.hh  generate_sigma.hh  generate_type_geev.hh  generate_type_geevx.hh  generate_type_gfpp.hh  generate_type_heev.hh  generate_type_ij.hh  generate_type_jordan.hh  generate_type_rand.hh  generate_type_svd.hh  matgen_label.cc  matgen_params.hh  random.cc  random.hh  set_lambdas.cc  set_lambdas.hh  testsweeper.hh
scalapack_api/: README.txt  README_scalapack_api.txt  example_pdgetrf.c  example_pdsgesv.c  scalapack_compat_syr2k.cc  scalapack_compat_syrk.cc  scalapack_compat_trsm.cc  scalapack_gecon.cc  scalapack_gels.cc  scalapack_gemm.cc  scalapack_gesv.cc  scalapack_gesvMixed.cc  scalapack_gesv_mixed.cc  scalapack_gesvd.cc  scalapack_getrf.cc  scalapack_getri.cc  scalapack_getrs.cc  scalapack_heev.cc  scalapack_heevd.cc  scalapack_hemm.cc  scalapack_her2k.cc  scalapack_herk.cc  scalapack_lange.cc  scalapack_lanhe.cc  scalapack_lansy.cc  scalapack_lantr.cc  scalapack_pocon.cc  scalapack_posv.cc  scalapack_potrf.cc  scalapack_potri.cc  scalapack_potrs.cc  scalapack_slate.hh  scalapack_symm.cc  scalapack_syr2k.cc  scalapack_syrk.cc  scalapack_trcon.cc  scalapack_trmm.cc  scalapack_trsm.cc
scalapack_compat/: GNUmakefile  scalapack_compat_gemm.cc
src/: add.cc  bdsqr.cc  cholqr.cc  colNorms.cc  copy.cc  csteqr2.f  dsteqr2.f  gbmm.cc  gbsv.cc  gbtrf.cc  gbtrs.cc  ge2tb.cc  geadd.cc  gecon.cc  gecondest.cc  gelqf.cc  gels.cc  gels_cholqr.cc  gels_qr.cc  gemm.cc  gemmA.cc  gemmC.cc  geqrf.cc  geqrf_qdwh_full.cc  gerbt.cc  gesv.cc  gesvMixed.cc  gesv_addmod.cc  gesv_addmod_ir.cc  gesv_mixed.cc  gesv_mixed_gmres.cc  gesv_nopiv.cc  gesv_rbt.cc  gesvd.cc  getrf.cc  getrf_addmod.cc  getrf_ca.cc  getrf_nopiv.cc  getrf_tntpiv.cc  getri.cc  (+109 more)
test/: CMakeLists.txt  GNUmakefile  README-test.txt  band_utils.hh  error.hh  gpu_bind.sh  grid_utils.hh  idle_gpus.py  lapack_flops.hh  matgen.hh  matrix_generator.cc  matrix_generator.hh  matrix_params.cc  matrix_params.hh  matrix_utils.cc  matrix_utils.hh  myscalapack_common.c  myscalapack_common.h  myscalapack_fortran.h  myscalapack_wrappers.hh  pclantr.f  pdlantr.f  print_matrix.hh  print_test.sh  pslantr.f  pzlantr.f  random.cc  random.hh  run_tests.py  scalapack_copy.hh  scalapack_support_routines.cc  scalapack_support_routines.hh  scalapack_wrappers.hh  scale.hh  test.cc  test.hh  test_add.cc  test_bdsqr.cc  test_copy.cc  test_gbmm.cc  (+74 more)
test/ref/: cauchy.txt  chow.txt  circul.txt  clement.txt  fiedler.txt  frank.txt  gcdmat.txt  hilb.txt  identity.txt  ij.txt  jordan.txt  jordanT.txt  kms.txt  lehmer.txt  lotkin.txt  minij.txt  moler.txt  ones.txt  orthog.txt  parter.txt  pei.txt  redheff.txt  ris.txt  toeppen.txt  tridiag.txt  triw.txt  zeros.txt
tools/: astyle.conf  check-style-hook.py  copyright.py  doxygen-filter.pl  doxygen-groups.sh  idle_gpus.py  make_release.py  md5sum.pl  release.py  slate-hipify.pl  slate-style-reject.pl
trace/: trace.c
unit_test/: CMakeLists.txt  print_tile.hh  run_tests.py  test.hh  test_BandMatrix.cc  test_HermitianMatrix.cc  test_LockGuard.cc  test_Matrix.cc  test_Memory.cc  test_OmpSetMaxActiveLevels.cc  test_SymmetricMatrix.cc  test_Tile.cc  test_Tile_kernels.cc  test_TrapezoidMatrix.cc  test_TriangularBandMatrix.cc  test_TriangularMatrix.cc  test_c_api.cc  test_func.cc  test_geadd.cc  test_gecopy.cc  test_gescale.cc  test_geset.cc  test_internal_blas.cc  test_lq.cc  test_norm.cc  test_qr.cc  test_util.cc  unit_test.cc  unit_test.hh  util_matrix.hh
(+393 files in other folders)
